# aoiro

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  main.bib  main.typ  usage.md
src/aoiro/: __init__.py  _expenses.py  _io.py  _ledger.py  _main.py  _multidimensional.py  _sales.py  _sheets.py  account.yml  cli.py
src/aoiro/reader/: _expenses.py  _io.py  _sales.py
tests/: test_cli.py  test_dunder_main.py  test_main.py
tests/reader/: test_io.py
tests/test_dir/expenses/: amazon.csv
tests/test_dir/general/: bs.csv
tests/test_dir/sales/: booth.csv  dlsite.csv  neko.csv  steam.csv
