[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "aoiro"
version = "0.0.0"
description = "CSV-based 青色申告 CLI app"
readme = "README.md"
license = "MIT"
authors = [
  { name = "34j", email = "34j.github@proton.me" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "account-codes-jp>=0.4.32",
  "attrs>=25.4.0",
  "cyclopts>=3.24.0",
  "dateparser>=1.3.0",
  "networkx>=3.4.2",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "requests-cache>=1.3.0",
  "rich>=10",
]
urls."Bug Tracker" = "https://github.com/34j/aoiro/issues"
urls.Changelog = "https://github.com/34j/aoiro/blob/main/CHANGELOG.md"
urls.documentation = "https://aoiro.readthedocs.io"
urls.repository = "https://github.com/34j/aoiro"
scripts.aoiro = "aoiro.cli:app"

[dependency-groups]
dev = [
  "pytest==9.*",
  "sybil[pytest]",
  "coverage",
  "pytest-cov==7.*",
]
docs = [
  "sphinx==9.*; python_version>='3.12'",
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "D",   # flake8-docstrings
  "C4",  # flake8-comprehensions
  "S",   # flake8-bandit
  "F",   # pyflake
  "E",   # pycodestyle
  "W",   # pycodestyle
  "UP",  # pyupgrade
  "I",   # isort
  "RUF", # ruff specific
]
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D401", # First line of docstring should be in imperative mood
  "E712"
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "aoiro", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
minversion = "9.0"
addopts = [
  "-v",
  "-Wonce",
  "-p no:doctest",
  "--cov=aoiro",
  "--cov-report=term",
  "--cov-report=xml"
]
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  'docs/.*',
  'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/aoiro/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
